# owa-exchange-mcp

./: .gitignore  .mcp.json.example  CLAUDE.md  LICENSE  README.md  login.py  pyproject.toml  server.json
exchange_mcp/: __init__.py  auth.py  models.py  owa_client.py  server.py  utils.py
exchange_mcp/tools/: __init__.py  analytics.py  auth.py  availability.py  calendar.py  email.py  folders.py  people.py
