[project]
name = "exchange-mcp-server"
version = "1.0.1"
description = "MCP server for Exchange / OWA - email, calendar, directory, availability"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["mcp", "exchange", "owa", "outlook", "email", "calendar"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/nhype/owa-exchange-mcp"
Repository = "https://github.com/nhype/owa-exchange-mcp"

[project.optional-dependencies]
auth = ["cryptography", "playwright"]

[project.scripts]
exchange-mcp-server = "exchange_mcp.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["exchange_mcp*"]
